--- a/main.ipynb
+++ b/main.ipynb
@@ -104,23 +104,29 @@
     "model_init_hidden_layers: list[layers.Layer] = [\n",
     "    layers.Conv2D(64, 3, padding = \"same\", activation = \"relu\"),\n",
     "    layers.Conv2D(64, 3, padding = \"same\", activation = \"relu\"),\n",
+    "    layers.SpatialDropout2D(0.1),\n",
     "    layers.MaxPooling2D(),\n",
     "    layers.Conv2D(128, 3, padding = \"same\", activation = \"relu\"),\n",
     "    layers.Conv2D(128, 3, padding = \"same\", activation = \"relu\"),\n",
+    "    layers.SpatialDropout2D(0.1),\n",
     "    layers.MaxPooling2D(),\n",
     "    layers.Conv2D(256, 3, padding = \"same\", activation = \"relu\"),\n",
     "    layers.Conv2D(256, 3, padding = \"same\", activation = \"relu\"),\n",
     "    layers.Conv2D(256, 3, padding = \"same\", activation = \"relu\"),\n",
+    "    layers.SpatialDropout2D(0.2),\n",
     "    layers.MaxPooling2D(),\n",
     "    layers.Conv2D(512, 3, padding = \"same\", activation = \"relu\"),\n",
     "    layers.Conv2D(512, 3, padding = \"same\", activation = \"relu\"),\n",
     "    layers.Conv2D(512, 3, padding = \"same\", activation = \"relu\"),\n",
+    "    layers.SpatialDropout2D(0.3),\n",
     "    layers.MaxPooling2D(),\n",
     "    layers.Flatten(),\n",
     "    layers.Dense(4096, activation = \"relu\"),\n",
+    "    layers.Dropout(0.4),\n",
     "    layers.Dense(4096, activation = \"relu\")\n",
     "]\n",
     "\n",
+    "early_stopping_patience: int = 3\n",
     "train_epochs: int = 4"
    ]
   },
@@ -353,9 +359,9 @@
     "    model.compile(optimizer = \"adam\", loss = \"categorical_crossentropy\", metrics = [\"accuracy\"])\n",
     "    print(f\"Compiled new model\")\n",
     "finally:\n",
-    "    early_stop_callback: keras.callbacks.EarlyStopping = keras.callbacks.EarlyStopping(\n",
+    "    early_stopping_callback: keras.callbacks.EarlyStopping = keras.callbacks.EarlyStopping(\n",
     "        monitor = \"val_loss\",\n",
-    "        patience = 3,\n",
+    "        patience = early_stopping_patience,\n",
     "        restore_best_weights = True,\n",
     "        mode = \"min\"\n",
     "    )\n",
@@ -367,7 +373,7 @@
     "        mode = \"min\"\n",
     "    )\n",
     "\n",
-    "    model.fit(train_dataset, validation_data = val_dataset,epochs = train_epochs, callbacks = [early_stop_callback, checkpoint_callback], verbose = 1)"
+    "    model.fit(train_dataset, validation_data = val_dataset,epochs = train_epochs, callbacks = [early_stopping_callback, checkpoint_callback], verbose = 1)"
    ]
   }
  ],
